chore: update query structure
