# internal/infrastructure/database/gorm/repo/mapping/user_mapping.go
@@ -8,25 +8,31 @@ import (
 	"github.com/umefy/godash/sliceskit"
 )
 
-func UserDbModelToUserDomain(user *dbModel.User) *userDomain.User {
+func DbModelToDomainUser(user *dbModel.User) *userDomain.User {
 	return &userDomain.User{
 		ID:        user.ID,
 		Email:     user.Email.ValueOrZero(),
 		Age:       user.Age.ValueOrZero(),
 		CreatedAt: user.CreatedAt,
 		UpdatedAt: user.UpdatedAt,
-		Orders: sliceskit.Map(user.Orders, func(order dbModel.Order) orderDomain.Order {
-			return *OrderDbModelToOrderDomain(&order)
-		}),
 	}
 }
 
-func UserDomainToUserDbModel(user *userDomain.User) *dbModel.User {
+func DomainUserToDbModel(user *userDomain.User) *dbModel.User {
 	return &dbModel.User{
 		ID:        user.ID,
 		Email:     null.ValueFrom(user.Email),
 		Age:       null.ValueFrom(user.Age),
 		CreatedAt: user.CreatedAt,
 		UpdatedAt: user.UpdatedAt,
+	}
+}
+
+func DbModelToDomainUserWithOrder(user *dbModel.User, orders []dbModel.Order) *userDomain.UserWithOrder {
+	return &userDomain.UserWithOrder{
+		User: *DbModelToDomainUser(user),
+		Orders: sliceskit.Map(orders, func(order dbModel.Order) orderDomain.Order {
+			return *DbModelToDomainOrder(&order)
+		}),
 	}
 }
