# openapi/docs/api.yaml
@@ -147,10 +147,6 @@ components:
           format: date-time
           readOnly: true
           example: "2021-01-01T00:00:00Z"
-        orders:
-          type: array
-          items:
-            $ref: '#/components/schemas/Order'
       required:
         - email
         - age
